force-app/main/default/objects/sked_Workday_XML_Template__mdt/sked_Workday_XML_Template__mdt.object-meta.xml
<CustomObject>
    <label>Workday XML Template</label>
    <pluralLabel>Workday XML Templates</pluralLabel>
</CustomObject>