force-app/main/default/objects/sked_Workday_XML_Template__mdt/fields/sked_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>sked_Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>