force-app/main/default/objects/sked_Workday_XML_Template__mdt/fields/sked_Template__c.field-meta.xml
<CustomField>
    <fullName>sked_Template__c</fullName>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>