force-app/main/default/objects/sked_Workday_XML_Template__mdt/fields/sked_Version__c.field-meta.xml
<CustomField>
    <fullName>sked_Version__c</fullName>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>